--- a/Test_api_recursivo.ipynb
+++ b/Test_api_recursivo.ipynb
@@ -296,9 +296,9 @@
         "outputId": "aff4b31a-64e7-4654-8d3e-d3752fe888e3"
       },
       "source": [
-        "my_access_token = 'EAAJzQuYU0LkBAB1aqewJYNovvLIDXzVhvmcBihTFuc53zWGTVPl5Y0Gm2xTK7csU1hZCX0rbCCQbtEUGZAHQo5BZClGXffBqY0XdAbKzFOcXnpqoh0rAnFuvLRZCUWUnmN3AtP2IgRAShYrYWDdrnK5ZCY5bZC7uabWxeJ6ZBnAFZBWZAqygsZCiWb0dpfDcBBFqZAvp4vNzq3jZBgZDZD'\n",
-        "my_app_secret = '0a07f284ef71b430c1702bacf4a23120'\n",
-        "my_app_id = '689681118580921'\n",
+        "my_access_token = '##",
+        "my_app_secret = '##'\n",
+        "my_app_id = '##'\n",
         "FacebookAdsApi.init(access_token=my_access_token)"
       ],
       "execution_count": 145,
