--- a/Test_api_recursivo.ipynb
+++ b/Test_api_recursivo.ipynb
@@ -279,9 +279,9 @@
         "id": "9m3iVk89sC6w"
       },
       "source": [
-        "lista_adaccounts_prueba = ['612465482865411',\n",
-        " '536689880372649',\n",
-        " '2723835421060528']"
+        "lista_adaccounts_prueba = ['#',
+        '#,
+        '#']
       ],
       "execution_count": 134,
       "outputs": []
@@ -297,8 +297,8 @@
       },
       "source": [
         "my_access_token = '##",
-        "my_app_secret = '##'\n",
-        "my_app_id = '##'\n",
+        "my_app_secret = '##',
+        "my_app_id = '##',
         "FacebookAdsApi.init(access_token=my_access_token)"
       ],
       "execution_count": 145,
